fix wrong contrast (WCAG AAA)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,7 +410,7 @@ main a:not(.nb) {
 article>time,
 footer p,
 main>h2+span {
-    color: #908d9d
+    color: #53515D
 }
 
 .d span,
